2005-07-16  Nick Roberts  <nickrob@snap.net.nz>

	* mi/gdb-mi.el:  Update for changes in Emacs 22.0.50.  Bring more
	features over from gdb-ui.el.  Use "-var-update --all-values" for
	faster re-display of watch expressions.

2005-07-15  Mark Kettenis  <kettenis@gnu.org>
	    Marcel Moolenaar  <marcel@xcllnt.net>

	* sparc64fbsd-nat.c: Include "regcache.h", <sys/types.h>,
	<machine/pcb.h> and "bsd-kvm.h".
	(sparc64fbsd_kvm_supply_pcb): New function.
	(_initialize_sparc64fbsd_nat): Enable libkvm interface.
	* config/sparc/fbsd.mh (NATDEPFILES): Add bsd-kvm.o.
	(LOADLIBES): New variable.
	* Makefile.in (sparc64fbsd-nat.o): Update dependencies.

2005-07-15  Nick Roberts  <nickrob@snap.net.nz>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* mi/mi-cmds.h (mi_no_values, mi_simple_values, mi_all_values): New
	declarations.
	* mi/mi-cmd-stack.c (mi_cmd_stack_list_locals): Use string
	constants instead of literals for MI command options.
	* mi/mi-cmd-var.c (mi_no_values, mi_simple_values, mi_all_values):
	New variables.
	(mi_parse_values_option, mi_print_value_p): New functions.
	(mi_cmd_var_list_children): Use mi_parse_values_option and
	mi_print_value_p.
	(mi_cmd_var_update): Support a PRINT_VALUES option.  Update calls
	to varobj_update_one.
	(varobj_update_one): Take a print_values argument.  Call
	mi_print_value_p.
	* varobj.c (varobj_get_gdb_type): New function.
	* varobj.h (varobj_get_gdb_type): New prototype.

2005-07-13  Daniel Jacobowitz  <dan@codesourcery.com>

	* ppc-linux-tdep.c (ppc_linux_init_abi): Set 64-bit link map offsets.

2005-07-12  Mark Kettenis  <kettenis@gnu.org>

	* dwarf2expr.h: Tweak comment.
	(struct dwarf_expr_context): Use `gdb_byte *' in read_mem and
	get_frame_base function pointers.
	(read_uleb128, read_sleb128): Change return type and types of
	first two arguments to `gdb_byte *'.
	(dwarf2_read_address): Change types of first two arguments to
	`gdb_byte *'.
	* dwarf2expr.c: Tweak comment.